🐛 fix: ensure spacing when all projects are shown
Fixes #303.

--- a/sass/parts/_posts_list.scss
+++ b/sass/parts/_posts_list.scss
@@ -80,8 +80,8 @@
     margin-top: 4rem;
 }
 
-.projects-first #all-projects {
-    margin-bottom: 4rem;
+.projects-first #posts-list {
+    margin-top: 4rem;
 }
 
 @media only screen and (max-width: 1100px) {
